# aria-engine

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py  run_telegram.py  setup.sh
scripts/: aria_monitor.py  google_auth_setup.py
src/aria/agents/: react_agent.py
src/aria/alerts/: __init__.py  alert_manager.py  alert_types.py
src/aria/api/: app.py
src/aria/auth/: __init__.py  google_oauth.py
src/aria/core/: config.py  exceptions.py
src/aria/events/: __init__.py  event_store.py  types.py
src/aria/mcp/: __init__.py  client.py  google_servers.py  tool_bridge.py  types.py
src/aria/memory/: __init__.py  file_storage.py  index_manager.py  memory_loader.py  storage_adapter.py  types.py
src/aria/monitoring/: __init__.py  checks.py
src/aria/providers/: llm_provider.py
tests/: conftest.py  test_task1_error_handling.py
tests/e2e/: test_e2e_api.py
tests/golden/: baseline_results.json  golden_test_set_v1.json  run_baseline.py
tests/integration/: test_hybrid_integration.py  test_memory_integration.py
tests/unit/: test_alerts.py  test_auth_ratelimit.py  test_briefing.py  test_builtin_tools.py  test_config.py  test_critic.py  test_dynamic_boundary.py  test_error_handling_v2.py  test_events.py  test_google_maps_tools.py  test_google_oauth_tools.py  test_hitl.py  test_hybrid_retrieval.py  test_korean_service_tools.py  test_llm_provider.py  test_mcp_client.py  test_memory.py  test_notion_tools.py  test_prompt_tuning.py  test_self_reflection_tuning.py  test_server_monitor.py  test_telegram.py  test_tool_integration.py  test_tool_registry.py
(+29 files in other folders)
