[project]
name = "aria-engine"
version = "0.1.0"
description = "ARIA - Agentic Reasoning and Information Access Engine"
requires-python = ">=3.11"
license = {text = "PROPRIETARY"}

dependencies = [
    # === LLM Provider Abstraction ===
    "litellm>=1.55.0",

    # === Agent Orchestration ===
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",

    # === Vector Database ===
    "qdrant-client>=1.12.0",

    # === Local Embeddings (no API cost) ===
    "fastembed>=0.4.0",

    # === BM25 Keyword Search (Hybrid Retrieval) ===
    "rank-bm25>=0.2.2",

    # === API Framework ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # === Configuration & Environment ===
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # === HTTP Client ===
    "httpx>=0.28.0",

    # === Logging & Observability ===
    "structlog>=24.4.0",

    # === Utilities ===
    "tiktoken>=0.8.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
